gatekeeper-files/lab1/constraintTemplate.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: maxreplicas
spec:
  crd:
    spec:
      names:
        kind: MaxReplicas
      validation:
        openAPIV3Schema:
          properties:
            replicas:
              type: integer 
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package maxreplicas

        violation[{"msg": msg}] {
          replicas := input.review.object.spec.replicas
          max_replicas := input.parameters.replicas
          to_number(replicas) > to_number(max_replicas)
          msg := sprintf("Deployment %v pods is higher than the maximum allowed of %v", [replicas, max_replicas])
        }
